--- a/End Game/End Game.csproj
+++ b/End Game/End Game.csproj
@@ -336,6 +336,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\3rdPartyAssets\DynamicBone\Demo\DynamicBoneDemo1.cs" />
+    <Compile Include="Assets\3rdPartyAssets\DynamicBone\Scripts\DynamicBone.cs" />
+    <Compile Include="Assets\3rdPartyAssets\DynamicBone\Scripts\DynamicBoneCollider.cs" />
+    <Compile Include="Assets\3rdPartyAssets\DynamicBone\Scripts\DynamicBoneColliderBase.cs" />
+    <Compile Include="Assets\3rdPartyAssets\DynamicBone\Scripts\DynamicBonePlaneCollider.cs" />
     <Compile Include="Assets\3rdPartyAssets\EffectExamples\Shared\Scripts\DecalDestroyer.cs" />
     <Compile Include="Assets\3rdPartyAssets\EffectExamples\Shared\Scripts\ExtinguishableFire.cs" />
     <Compile Include="Assets\3rdPartyAssets\EffectExamples\Shared\Scripts\GunAim.cs" />
@@ -460,6 +465,7 @@
   <ItemGroup>
     <None Include="Assets\3rdPartyAssets\Day-Night Skyboxes\Textures\Readme for Assigning.txt" />
     <None Include="Assets\3rdPartyAssets\Day-Night Skyboxes\readme.txt" />
+    <None Include="Assets\3rdPartyAssets\DynamicBone\ReadMe.txt" />
     <None Include="Assets\3rdPartyAssets\EffectExamples\Shared\Shaders\SurfaceShader_VC.shader" />
     <None Include="Assets\3rdPartyAssets\PostProcessing-2\PostProcessing\Editor\Unity.Postprocessing.Editor.asmdef" />
     <None Include="Assets\3rdPartyAssets\PostProcessing-2\PostProcessing\Runtime\Unity.Postprocessing.Runtime.asmdef" />
