Updated Menu Beta.unity
Created Menu_House.prefab

Added Cotton Stuffed Menu Theme.mp3
Added Lightning crack with a huge crisp sound and background torrential rain.wav
Updated Window.mat
Added new Tags in TagManager.asset

Created LightningFlash.cs
Created LightningSource.cs

--- a/End Game/End Game.csproj
+++ b/End Game/End Game.csproj
@@ -452,6 +452,8 @@
     <Compile Include="Assets\Scripts\liam scripts\Interactions.cs" />
     <Compile Include="Assets\Scripts\liam scripts\Items.cs" />
     <Compile Include="Assets\Scripts\liam scripts\JackInTheBox.cs" />
+    <Compile Include="Assets\Scripts\LightningFlash.cs" />
+    <Compile Include="Assets\Scripts\LightningSource.cs" />
     <Compile Include="Assets\Scripts\Menu.cs" />
     <Compile Include="Assets\Scripts\NPC\Crocodile.cs" />
     <Compile Include="Assets\Scripts\NPC\NPC.cs" />
