--- a/End Game/End Game.csproj
+++ b/End Game/End Game.csproj
@@ -336,6 +336,70 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\3rdPartyAssets\Aura\Attributes\ColorCircularPickerAttribute.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Attributes\Texture3DPreviewAttribute.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\Aura.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\AuraLight.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\AuraVolume.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\Buffers.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\CullableObject.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\DirectionalLightsManager.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\DirectionalShadowDataCollector.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\Frustum.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\FrustumSettings.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\LightsManager.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\ObjectsCuller.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\PointLightsManager.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\ShadowmapsCollector.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\SpotLightsManager.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\SwappableRenderTexture.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\Texture2DArrayComposer.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\VolumesManager.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\VolumetricTexture.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Classes\VolumetricTextureArrayComposer.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Enums\FrustumParametersEnum.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Enums\OcclusionCullingAccuracyEnum.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Enums\VolumetricTextureFilterModeEnum.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Enums\VolumetricTextureWrapModeEnum.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Enums\VolumeTypeEnum.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Fireball\Fireball.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Scripts\AutoMoveAndRotate.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Scripts\DebugFps.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Scripts\FreeCamera.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Scripts\LightFlicker.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Scripts\MoveSinCos.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Scripts\SinRotationOffset.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\CameraExtensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\FloatExtensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\FrustumParametersEnumExtensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\Gaia\GaiaExtension.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\GenericExtensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\IntExtensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\Matrix4x4Extensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\RenderTextureExtensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\StringExtensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\Vector3Extensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Extensions\Vector4Extensions.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Scripts\GenerateComputeShaderKernelVariants.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Statics\CustomGizmo.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Statics\FrustumCorners.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\DirectionalLightParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\DynamicNoiseParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\FrustumSettingsParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\LevelsParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\MatrixFloats.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\PointLightParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\SpotLightParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\TransformParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeData.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeDynamicNoiseData.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeGradient.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeInjectionColorParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeInjectionCommonParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeInjectionParameters.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeInjectionShape.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeLevelsData.cs" />
+    <Compile Include="Assets\3rdPartyAssets\Aura\Structs\VolumeTextureData.cs" />
     <Compile Include="Assets\3rdPartyAssets\DynamicBone\Demo\DynamicBoneDemo1.cs" />
     <Compile Include="Assets\3rdPartyAssets\DynamicBone\Scripts\DynamicBone.cs" />
     <Compile Include="Assets\3rdPartyAssets\DynamicBone\Scripts\DynamicBoneCollider.cs" />
@@ -456,6 +520,7 @@
     <Compile Include="Assets\Scripts\LightningSource.cs" />
     <Compile Include="Assets\Scripts\Menu.cs" />
     <Compile Include="Assets\Scripts\NPC\Crocodile.cs" />
+    <Compile Include="Assets\Scripts\NPC\MenuAI.cs" />
     <Compile Include="Assets\Scripts\NPC\NPC.cs" />
     <Compile Include="Assets\Scripts\NPC\Owl.cs" />
     <Compile Include="Assets\Scripts\NPC\PandaSense.cs" />
@@ -465,6 +530,39 @@
     <Compile Include="Assets\Scripts\UIManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\3rdPartyAssets\Aura\Editor\Shaders\ColorFieldDrawerShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Editor\Shaders\Texture3DPreviewShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Fireball\FireballBlendAdd.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\License\license.txt" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Aura.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\ComputeAccumulationComputeShader.compute" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\ComputeDataComputeShader.compute" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\ComputeMaximumDepthComputeShader.compute" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\DirectionalLightInjection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\OcclusionCulling.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\PointLightInjection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\SpotLightInjection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\TemporalReprojection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\VolumeInjection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\AuraParticlesBase.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\AuraParticlesUsage.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\AuraUsage.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\BlueNoise.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\Common.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\CommonFunctions.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\CommonVariables.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\Noise.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\Structs.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\Particles\AuraParticlesAdditive.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\Particles\AuraParticlesAlphaBlend.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\Particles\AuraParticlesBlendAdd.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\PostProcessShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\ProcessOcclusionTextureShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\StoreDirectionalSpotLightCookieMap.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\StorePointLightCookieMap.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\StorePointLightShadowMap.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\StoreShadowDataShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\Surface\AuraStandardAlphaBlended.shader" />
     <None Include="Assets\3rdPartyAssets\Day-Night Skyboxes\Textures\Readme for Assigning.txt" />
     <None Include="Assets\3rdPartyAssets\Day-Night Skyboxes\readme.txt" />
     <None Include="Assets\3rdPartyAssets\DynamicBone\ReadMe.txt" />
