--- a/End Game/Unity.Postprocessing.Runtime.csproj
+++ b/End Game/Unity.Postprocessing.Runtime.csproj
@@ -376,6 +376,39 @@
     <Compile Include="Assets\3rdPartyAssets\PostProcessing-2\PostProcessing\Runtime\Utils\XRSettings.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\3rdPartyAssets\Aura\Editor\Shaders\ColorFieldDrawerShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Editor\Shaders\Texture3DPreviewShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Examples\Sponza\Fireball\FireballBlendAdd.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\License\license.txt" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Aura.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\ComputeAccumulationComputeShader.compute" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\ComputeDataComputeShader.compute" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\ComputeMaximumDepthComputeShader.compute" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\DirectionalLightInjection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\OcclusionCulling.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\PointLightInjection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\SpotLightInjection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\TemporalReprojection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\ComputeShaders\Includes\VolumeInjection.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\AuraParticlesBase.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\AuraParticlesUsage.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\AuraUsage.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\BlueNoise.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\Common.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\CommonFunctions.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\CommonVariables.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\Noise.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Includes\Structs.cginc" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\Particles\AuraParticlesAdditive.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\Particles\AuraParticlesAlphaBlend.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\Particles\AuraParticlesBlendAdd.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\PostProcessShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\ProcessOcclusionTextureShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\StoreDirectionalSpotLightCookieMap.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\StorePointLightCookieMap.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\StorePointLightShadowMap.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\StoreShadowDataShader.shader" />
+    <None Include="Assets\3rdPartyAssets\Aura\Shaders\Shaders\Surface\AuraStandardAlphaBlended.shader" />
     <None Include="Assets\3rdPartyAssets\Day-Night Skyboxes\Textures\Readme for Assigning.txt" />
     <None Include="Assets\3rdPartyAssets\Day-Night Skyboxes\readme.txt" />
     <None Include="Assets\3rdPartyAssets\DynamicBone\ReadMe.txt" />
